@@ -1,6 +1,7 @@
 Release Notes
 
 * current
+  * added hasValueInCatchall
   * keep records in SiteData for 48h
   * changed to reassign high prio jobs in activated/starting when sites are inactive
   * changed lastStart to be updated only by managed/user/panda
